--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- CSS styleshet -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
   <link rel="icon" href="images/icon.png">
   <!-- fonts awesome -->
   <script src="https://kit.fontawesome.com/097fb61017.js" crossorigin="anonymous"></script>
